Add SceneManager and DeviceDetector classes; integrate lil-gui for debugging

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite": "^7.1.5"
   },
   "dependencies": {
+    "lil-gui": "^0.20.0",
     "three": "^0.180.0",
     "vercel": "^48.0.0"
   }
